# Library

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Library  Makefile  README.md  book.cpp  book.h  books.txt  cmake_install.cmake  library.cpp  library.h  main.cpp  pomysl.txt  reader.cpp  reader.h  readers.txt
